working alpha add credit on rental checkout, needs smoothing, but will topup, then allow reservation, which shows in dashboard etc,

--- a/client/styles.css
+++ b/client/styles.css
@@ -452,6 +452,13 @@ input.member_search{
     color: white !important;
     /* transform: translate(0, 4px); */
 }
+.button.teal {
+    /* background-color: rgba(200, 200, 200, 0.5) !important; */
+    /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
+    background-color: teal !important;
+    color: white !important;
+    /* transform: translate(0, 4px); */
+}
 .button.orange {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
