--- a/components/profile/member_sections.jade
+++ b/components/profile/member_sections.jade
@@ -98,7 +98,9 @@ template(name='member_dashboard')
     each upcoming_reservations
         .ui.header hi
         
-    .ui.header current hourly wage
+    .ui.pointer.header.recalc_wage_stats
+        |current hourly wage
+    
     
 
 
