--- a/components/rentals/res_edit.jade
+++ b/components/rentals/res_edit.jade
@@ -10,7 +10,7 @@ template(name='reservation_edit')
                     .ui.hidden.divider     
                     .ui.large.fluid.icon.button.cancel_reservation
                         i.ban.icon
-                        |cancel
+                        |cancel/delete
                     .ui.header 
                         strong #{rental.title}
                         small reservation
@@ -78,38 +78,72 @@ template(name='reservation_edit')
                                 small /hr = $
                                 |#{cost}
                             if rental.res_start_dropoff
-                                |reservation start dropoff available for $#{rental.res_start_dropoff_fee} extra
-                                +boolean_edit key='res_start_dropoff_selected' classes='trigger_recalc' label='select start dropoff' direct=true data=this._id  
+                                .ui.header 
+                                    small add reservation start dropoff for 
+                                    |$#{rental.res_start_dropoff_fee}
+                                +boolean_edit key='res_start_dropoff_selected' classes='trigger_recalc' label='start dropoff' direct=true data=this._id  
                             div
                             if rental.res_end_pickup
-                                |reservation end pickup available for $#{rental.res_end_pickup_fee} extra
-                                +boolean_edit key='res_end_pickup_selected' classes='trigger_recalc' label='select end pickup' direct=true data=this._id
+                                .ui.header
+                                    small add reservation end pickup for 
+                                    |$#{rental.res_end_pickup_fee}
+                                +boolean_edit key='res_end_pickup_selected' classes='trigger_recalc' label='end pickup' direct=true data=this._id
                             .ui.divider
-                            .ui.header 
-                                small your balance
-                                +i name='coins' 
-                                |{{fixed currentUser.credit}} 
-                            .ui.header.result
-                                |deductions
-                                | -  #{cost} 
-                                if res_start_dropoff_selected
-                                    | + #{rental.res_start_dropoff_fee}
-                                if res_end_pickup_selected
-                                    | + #{rental.res_end_pickup_fee}
-                            .ui.header.result
-                                |balance after purchase
-                                small = 
-                                //- small balance after purchase 
-                                +i name='coins' 
-                                |#{member_balance_after_reservation}
-                        
-                        
+                            if can_buy
+                                .ui.header 
+                                    small your balance
+                                    |{{fixed currentUser.credit}} 
+                                .ui.header
+                                    |deductions
+                                    | -  #{cost} 
+                                    if res_start_dropoff_selected
+                                        | + #{rental.res_start_dropoff_fee}
+                                    if res_end_pickup_selected
+                                        | + #{rental.res_end_pickup_fee}
+                                .ui.header
+                                    |balance after purchase
+                                    small = 
+                                    //- small balance after purchase 
+                                    |#{member_balance_after_reservation}
+                            else if need_credit
+                                .ui.header need credit
+                                .ui.header 
+                                    small your balance
+                                    |{{fixed currentUser.credit}} 
+                                .ui.header
+                                    small cost
+                                    | #{cost} 
+                                    //- if res_start_dropoff_selected
+                                    //-     | + #{rental.res_start_dropoff_fee}
+                                    //- if res_end_pickup_selected
+                                    //-     | + #{rental.res_end_pickup_fee}
+                                .ui.header
+                                    small balance after purchase
+                                    small = 
+                                    |#{member_balance_after_reservation}
                     unless submitted
-                        .ui.big.green.fluid.button.submit_reservation(class=submit_button_class)
-                            +i name='paid'        
-                            |submit and pay
+                        if can_buy
+                            .ui.big.green.fluid.button.submit_reservation(class=submit_button_class)
+                                +i name='paid'        
+                                |submit and pay
+                        else if need_credit
+                            .ui.header #{member_balance_after_reservation} credit needed to purchase
+                            .ui.inline.header add 
+                            .ui.inline.input
+                                input.adding_credit(type='number' value=member_balance_after_reservation) 
+                            .ui.big.teal.fluid.button.add_credit(class=submit_button_class)
+                                +i name='online-money-transfer'        
+                                |add credit to reserve
+                        else if need_approval
+                            .ui.big.teal.fluid.button.request_reservation(class=submit_button_class)
+                                +i name='paid'        
+                                |request reservation
+                        else
+                            .ui.big.disabled.fluid.button.send_message(title='cannot reserve for other reason')
+                                +i name='ban'
+                                |send message
                     else
                         .ui.header submitted {{ from_now submitted_timestamp }}
                         .ui.orange.fluid.button.unsubmit
                             i.undo.icon
-                            |unsubmit
+                            |cancel
