--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -16,7 +16,7 @@ template(name='rental_view')
                         a.ui.fluid.button(href="/rental/#{_id}/edit")
                             i.blue.pencil.icon
                             |edit
-                    +reserve_button
+                    //- +reserve_button
                     .ui.header added by #{_author_username}
                     |#{when}
                     with _author_id
