--- a/components/rentals/rental_edit.jade
+++ b/components/rentals/rental_edit.jade
@@ -36,9 +36,10 @@ template(name='rental_edit')
                                 |finance
                                 i.dropdown.icon
                         .content
-                            +float_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
+                            //- +float_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
                             +number_edit key='minimum_bid' label='minimum bid ($)' icon='refund' direct=true
-                            +float_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
+                            //- +float_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
+                            +number_edit key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
                             div
                             +boolean_edit key='security_deposit_required' label='security deposit required' icon='safe-in' direct=true
                             if security_deposit_required
