--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -40,7 +40,7 @@ template(name='rental_view')
                         
                     +comments
                 .twelve.wide.column
-                    +quick_res
+                    +rental_bids
                     .ui.basic.segment
                         +html_view key='description' label='content' icon='content' direct=true
                     +rental_stats
