--- a/client/fields.jade
+++ b/client/fields.jade
@@ -557,10 +557,10 @@ template(name='number_view')
                 |#{title}
             else if label
                 |#{label}
-            else if key
-                |#{key}
-            else
-                |#{this}
+            //- else if key
+            //-     |#{key}
+            //- else
+            //-     |#{this}
         .ui.inline.header &nbsp;
             if unit
                 span #{prefix}
