--- a/components/rentals/rental_bids.jade
+++ b/components/rentals/rental_bids.jade
@@ -1,4 +1,4 @@
-template(name='quick_res')
+template(name='rental_bids')
     .ui.grid
         .row
             .eight.wide.column
@@ -27,9 +27,10 @@ template(name='quick_res')
                         .ui.header #{current_date} bids @ #{current_hour}
                         each hourly_bids
                             +single_bid
-                        .ui.button.new_bid
-                            i.plus.icon
-                            |bid
+                        unless has_bid
+                            .ui.button.new_bid
+                                i.plus.icon
+                                |bid
 
 
 
@@ -48,26 +49,15 @@ template(name='upcoming_day')
 
 template(name='single_bid')
     .ui.segment
-        .ui.header #{date} @ #{hour}
+        //- .ui.header #{date} @ #{hour}
         //- +date_edit key='start_date' label='start date' direct=true
         //- +number_edit key='hour' label='start hour' direct=true
-        +number_edit key='bid_amount' label='bid amount' icon='money' direct=true
-        //- +boolean_edit key='complete' label='complete' icon='check' direct=true
-        //- .ui.input
-        //-     //- input.res_start(type='datetime-local' value=start_datetime)
-        //-     input.res_start(type='datetime-local' value="#{start_datetime}")
-        //- if start_datetime
-        //-     .ui.header 
-        //-         |duration
-        //-     div
-        //-     .ui.input            
-        //-         input.other_hour(type='number' min='0' value=hour_duration autocomplete="off")
-        //-     .ui.header 
-        //-         +i name='date-from'    
-        //-         |end date/time            
-        //-     .ui.input
-        //-         input.res_end(type='datetime-local' value="#{end_datetime}")
-        .ui.fluid.button.cancel_bid
-            i.ban.icon
-            |cancel
+        if is_author
+            +number_edit key='bid_amount' label='amount' icon='money' direct=true
+            .ui.fluid.button.cancel_bid
+                i.ban.icon
+                |cancel
+        else
+            +number_view key='bid_amount' label='bid' icon='money' direct=true
+            |by #{_author_username}
             
